rechange backend url

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_URL=http://todo-dg-env-1.eba-xembydde.ap-northeast-2.elasticbeanstalk.com/
+REACT_APP_BACKEND_URL=http://localhost:5000
